增加健康检查，增加swagger配置

--- a/Kinovea.ApiGetway/Kinovea.ApiGetway.csproj
+++ b/Kinovea.ApiGetway/Kinovea.ApiGetway.csproj
@@ -12,4 +12,15 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.UI" Version="8.0.0" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.0" />
+		<PackageReference Include="AspNetCore.HealthChecks.Uris" Version="8.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="prometheus-net.AspNetCore" Version="8.0.0" />
+	</ItemGroup>
+
 </Project>
