--- a/Kinovea.ApiGetway/appsettings.json
+++ b/Kinovea.ApiGetway/appsettings.json
@@ -5,5 +5,34 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Video Service",
+        "Uri": "http://localhost:5001/health"
+      },
+      {
+        "Name": "Camera Service",
+        "Uri": "http://localhost:5002/health"
+      }
+    ],
+    "EvaluationTimeInSeconds": 5
+  },
+  "ServiceRegistry": {
+    "Services": [
+      {
+        "Name": "VideoService",
+        "Url": "http://localhost:5001",
+        "HealthCheck": "/health",
+        "Documentation": "/swagger"
+      },
+      {
+        "Name": "CameraService",
+        "Url": "http://localhost:5002",
+        "HealthCheck": "/health",
+        "Documentation": "/swagger"
+      }
+    ]
+  }
 }
