--- a/Kinovea.ApiGetway/appsettings.json
+++ b/Kinovea.ApiGetway/appsettings.json
@@ -34,5 +34,21 @@
         "Documentation": "/swagger"
       }
     ]
+  },
+  "Consul": {
+    "Url": "http://localhost:8500", // Consul服务地址
+    "ServiceName": "kinovea-gateway",
+    "ServiceId": "kinovea-gateway-1",
+    "ServiceAddress": "localhost",
+    "ServicePort": 5000
+  },
+  "Gateway": {
+    "ServiceName": "kinovea-gateway",
+    "ServiceAddress": "localhost",
+    "ServicePort": 5000,
+    "RoutePrefix": "api",
+    "UseHttps": false,
+    "RequestTimeoutSeconds": 30,
+    "GlobalRetryCount": 3
   }
 }
