--- a/Kinovea.CameraService/appsettings.Development.json
+++ b/Kinovea.CameraService/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
+    }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:5002"
+      }
     }
   }
 }
