--- a/Kinovea.CameraService/appsettings.json
+++ b/Kinovea.CameraService/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5002"
+        "Url": "http://+:5002"
       }
     }
   }
