--- a/Kinovea.VideoService/Kinovea.VideoService.csproj
+++ b/Kinovea.VideoService/Kinovea.VideoService.csproj
@@ -1,19 +1,41 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FFmpeg.AutoGen" Version="7.1.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.7" />
+		<PackageReference Include="Minio" Version="5.0.0" />
+		<PackageReference Include="log4net" Version="2.0.15" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Kinovea.Services\Kinovea.Services.csproj" />
-    <ProjectReference Include="..\Kinovea.Video.FFMpeg\PlayerServer\PlayerServer.vcxproj" />
-    <ProjectReference Include="..\Kinovea.Video\Kinovea.Video.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Kinovea.ScreenManager\Kinovea.ScreenManager.csproj" />
+		<ProjectReference Include="..\Kinovea.Services\Kinovea.Services.csproj" />
+		<ProjectReference Include="..\Kinovea.Video.Bitmap\Kinovea.Video.Bitmap.csproj" />
+		<ProjectReference Include="..\Kinovea.Video\Kinovea.Video.csproj" />
+		
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Include="Kinovea.Video.FFMpeg">
+	    <HintPath>..\Kinovea.Video.FFMpeg\bin\Kinovea.Video.FFMpeg.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\Kinovea.Video.FFMpeg\bin\x64\Debug\*.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="log4net.config">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
