--- a/Kinovea.VideoService/appsettings.json
+++ b/Kinovea.VideoService/appsettings.json
@@ -6,6 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "Minio": {
+    "Endpoint": "115.190.131.197",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin123!",
+    "Secure": false,
+    "Port": 9000,
+    "TempPath": "D:\\ServiceTemp\\Kinovea" // 可配置的临时目录
+  },
   "Kestrel": {
     "Endpoints": {
       "Http": {
