--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -2397,6 +2397,12 @@
   <ItemGroup>
     <None Include="Resources\bring-forward-16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\delete-notes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\notes2-16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="FixAL1703Warning" BeforeTargets="GenerateSatelliteAssemblies" Condition="'$(PlatformTarget)' == 'x64'">
     <Message Text="Adjusting SDK tools directory to use x64 version of AL.EXE" />
