Added partial export of KVA for video recordings and swap the order of load between default kva and sidecar kva.
- New option to include/exclude drawings and calibration from exported KVA (only used for the KVA exported as part of video recording).
- working zone bounds are never exported.
- detached drawings, singleton drawings, video filters, trackability, etc. are never exported (except coordinate system if calibration is exported).

Swapped order of load between default kva and sidecar kva. The more general data should be imported first to let the more specific one override it.

--- a/Kinovea.Services/Kinovea.Services.csproj
+++ b/Kinovea.Services/Kinovea.Services.csproj
@@ -271,6 +271,7 @@
     <Compile Include="Types\ImageFormat.cs" />
     <Compile Include="Types\ImageFormatHelper.cs" />
     <Compile Include="Types\ImageRotation.cs" />
+    <Compile Include="Types\KVAExportFlags.cs" />
     <Compile Include="Types\LensCalibrationParameters.cs" />
     <Compile Include="Types\MeasureLabelType.cs" />
     <Compile Include="Types\Pair.cs" />
