--- a/Kinovea.ScreenManager/packages.config
+++ b/Kinovea.ScreenManager/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="33.1.0" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml" version="3.0.2" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml.Framework" version="3.0.2" targetFramework="net48" />
   <package id="log4net" version="2.0.14" targetFramework="net48" />
   <package id="MathNet.Numerics" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="NAudio" version="2.2.1" targetFramework="net48" />
   <package id="NAudio.Asio" version="2.2.1" targetFramework="net48" />
