--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -2443,6 +2443,18 @@
   <ItemGroup>
     <None Include="Resources\arrow-up2-16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\microphone-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\block-microphone-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ear-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\deaf-16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="FixAL1703Warning" BeforeTargets="GenerateSatelliteAssemblies" Condition="'$(PlatformTarget)' == 'x64'">
     <Message Text="Adjusting SDK tools directory to use x64 version of AL.EXE" />
