--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -2455,6 +2455,12 @@
   <ItemGroup>
     <None Include="Resources\deaf-16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\live-photos-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\live_orange.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="FixAL1703Warning" BeforeTargets="GenerateSatelliteAssemblies" Condition="'$(PlatformTarget)' == 'x64'">
     <Message Text="Adjusting SDK tools directory to use x64 version of AL.EXE" />
