WIP implementation of the Window system.
- Added top level window menu and sub-menus.
- Added a new "Windows" directory in settings.
- Window descriptors and manager.
- Started window reload logic.
- Moved the window size and position style of properties out of the core preferences and into the window descriptor.

--- a/Kinovea.Services/Kinovea.Services.csproj
+++ b/Kinovea.Services/Kinovea.Services.csproj
@@ -304,6 +304,9 @@
     <Compile Include="Preferences\IPreferenceSerializer.cs" />
     <Compile Include="Preferences\KeyboardPreferences.cs" />
     <Compile Include="Commands\Commands.cs" />
+    <Compile Include="Windows\WindowDescriptor.cs" />
+    <Compile Include="Windows\WindowManager.cs" />
+    <Compile Include="Windows\WindowStartupMode.cs" />
     <Compile Include="WinForms\FormsHelper.cs" />
     <Compile Include="Commands\HotkeyCommand.cs" />
     <Compile Include="Commands\HotkeySettings.cs" />
