--- a/Kinovea/Kinovea.csproj
+++ b/Kinovea/Kinovea.csproj
@@ -526,6 +526,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="kinovea-256x256.ico" />
+    <None Include="Resources\application_form.png" />
+    <None Include="Resources\application_edit.png" />
+    <None Include="Resources\application_cascade.png" />
+    <None Include="Resources\application_add.png" />
     <None Include="Resources\bug-16.png" />
     <None Include="Resources\close2d-16.png" />
     <None Include="Resources\close2c-16.png" />
