WIP Window system.
- Started the implementation of the Window property form.
- Implemented Reopen window menu.
- Clarified the role between launch settings and window manager.
- Removed instance name from Software.  Added TitleName to window manager.
- Reworked the command line arguments
    - dropped workspaces.
    - -name and -id to reload a saved window, -video to start a video.

--- a/Kinovea/Kinovea.csproj
+++ b/Kinovea/Kinovea.csproj
@@ -195,6 +195,12 @@
       <DependentUpon>RootLang.resx</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="UserInterface\FormWindowProperties.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface\FormWindowProperties.Designer.cs">
+      <DependentUpon>FormWindowProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface\FormPreferences2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -311,6 +317,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface\FormWindowProperties.resx">
+      <DependentUpon>FormWindowProperties.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserInterface\FormPreferences2.resx">
       <DependentUpon>FormPreferences2.cs</DependentUpon>
@@ -526,6 +535,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="kinovea-256x256.ico" />
+    <None Include="Resources\application.png" />
     <None Include="Resources\application_form.png" />
     <None Include="Resources\application_edit.png" />
     <None Include="Resources\application_cascade.png" />
