--- a/Kinovea/packages.config
+++ b/Kinovea/packages.config
@@ -9,6 +9,7 @@
   <package id="NAudio.Wasapi" version="2.2.1" targetFramework="net48" />
   <package id="NAudio.WinForms" version="2.2.1" targetFramework="net48" />
   <package id="NAudio.WinMM" version="2.2.1" targetFramework="net48" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
 </packages>
