WIP capture folders - insert variable toolbox.

--- a/Kinovea/Kinovea.csproj
+++ b/Kinovea/Kinovea.csproj
@@ -198,6 +198,12 @@
       <DependentUpon>RootLang.resx</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="UserInterface\FormInsertVariable.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface\FormInsertVariable.Designer.cs">
+      <DependentUpon>FormInsertVariable.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface\FormWindowManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -326,6 +332,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface\FormInsertVariable.resx">
+      <DependentUpon>FormInsertVariable.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserInterface\FormWindowManager.resx">
       <DependentUpon>FormWindowManager.cs</DependentUpon>
@@ -547,6 +556,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="kinovea-256x256.ico" />
+    <None Include="Resources\eye-16.png" />
+    <None Include="Resources\variable-16.png" />
     <None Include="Resources\add-16.png" />
     <None Include="Resources\folder_add.png" />
     <None Include="Resources\circled-play-green2-16.png" />
